[r=jameinel][bug=][author=jameinel] Visual clean up of node and tag pages. Improved spacing, layout etc.

--- a/src/maasserver/static/css/components/blocks.css
+++ b/src/maasserver/static/css/components/blocks.css
@@ -10,6 +10,18 @@
     clear: right;
     margin-right: 0;
     }
+.block.line-top {
+    border-top-width: 1px;
+    }
+.block.line-bottom {
+    border-bottom-width: 1px;
+    }
+.block.line-left {
+    border-left-width: 1px;
+    }
+.block.line-right {
+    border-right-width: 1px;
+    }
 .block.full-width {
     width: 100%;
     margin-left: 0;
